--- a/onlineplantnursery/src/component/Planter/commonStyle.module.css
+++ b/onlineplantnursery/src/component/Planter/commonStyle.module.css
@@ -5,3 +5,9 @@
     margin-bottom: 20px;
     margin-top: 20px;
 }
+.listStyle{   
+    border-radius:5px;
+}
+.listStyle:hover{
+    box-shadow:2px 2px 5px rgba(0,0,0,0.3);
+}
