--- a/onlineplantnursery/src/component/plant/commonStyle.module.css
+++ b/onlineplantnursery/src/component/plant/commonStyle.module.css
@@ -3,3 +3,9 @@
     font-size: 15px;
     
 }
+.listStyle{
+    border-radius:5px;
+}
+.listStyle:hover{
+    box-shadow:2px 2px 5px rgba(0,0,0,0.3);
+}
