--- a/onlineplantnursery/src/component/seed/commonStyle.module.css
+++ b/onlineplantnursery/src/component/seed/commonStyle.module.css
@@ -2,3 +2,9 @@
     color:red;
     margin:20px;
 }
+.listStyle{
+    border-radius:5px;
+}
+.listStyle:hover{
+    box-shadow:2px 2px 5px rgba(0,0,0,0.3);
+}
